grafana-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: grafana
  namespace: grafana
  labels:
    app: grafana
  annotations:
    haproxy.router.openshift.io/timeout: 5m
spec:
  host: grafana.apps.sno.stwihtburh.com
  to:
    kind: Service
    name: grafana-oauth
    weight: 100
  port:
    targetPort: 3001
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
